--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,6 @@
 <style>
   body {
     font-family: 'Roboto Condensed', serif !important;
-    /* font-family: 'Spline Sans Mono', serif !important; */
-    /* font-size: 12px; */
-    /* font-weight: 400; */
   }
 </style>
 
@@ -23,5 +20,8 @@
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script>
+    localStorage.setItem('regionCode','BR');
+  </script>
 </body>
 </html>
