Implementação da API de capturar a localização

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,27 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script>
-    localStorage.setItem('regionCode','BR');
+    // Get user currently position 
+    if('geolocation' in navigator) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        const latitude = position.coords.latitude;
+        const longitude = position.coords.longitude;
+
+        const apiURL = `https://api.bigdatacloud.net/data/reverse-geocode-client?latitude=${latitude}&longitude=${longitude}&localityLanguage=pt`;
+
+        fetch(apiURL)
+        .then(response => response.json())
+        .then(data => {
+          localStorage.setItem('regionCode',data.countryCode);
+        })
+        .catch(err => {
+          console.error(err);
+        }) ;
+      },
+      function(err) {
+        console.error(err);
+      })
+    }
   </script>
 </body>
 </html>
